# reddit-CLI

./: README.md  pyproject.toml
docs/: INSTALLATION.md
reddit_cli/: __main__.py  login.py  main.py  post.py  profile.py  subreddit.py  utils.py
tests/: tests.py  tests_login.py  tests_post.py  tests_profile.py  tests_subreddit.py
